Fixed the alignment of index title for small

--- a/public_html/css/primary.css
+++ b/public_html/css/primary.css
@@ -277,7 +277,7 @@ body {
     }
     
     .index_info_title {
-        margin-left: 10em;
+        margin-left: 11.7em;
         font-size: 1.2em;
     }
     
